tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.diagnostic
diagnostic error code=O0001 family=ownership source="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.ari" line=7 column=36 message="cannot immutably borrow mutably borrowed binding 'value'"
